feat: improve docs
